@@ -1,5 +1,12 @@
 2012-01-10  Vladimir Tzankov  <vtzankov@gmail.com>
 
+	* zthread.d (xlock_lock_helper): fix possible deadlock when acquiring
+	a lock released by xcondition_wait()
+	(THREAD-INTERRUPT): release thread's _signal_reenter_ok spinlock on
+	error
+
+2012-01-10  Vladimir Tzankov  <vtzankov@gmail.com>
+
 	* xthread.d (testandset) [ARM]: implement spinlocks for ARM
 
 2011-10-17  Vladimir Tzankov  <vtzankov@gmail.com>
